- Login page wip. - Added Bootstrap 4.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -1,7 +1,8 @@
 
-title.prueba=Beer Fermentation Control - Test
+title=Beer Fermentation Control
 hello.world=Hello World!
-title.error=Beer Fermentation Control - Error!
 h1.error=Error!
 p.1.error=There's been an unexpected error. Contact with the WebMaster.
-=
+h1.login=Log-in
+subtitle.login=Enter your username and password
+language=en
