--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -1,7 +1,8 @@
 
-title.prueba=Beer Fermentation Control - Prueba
+title=Beer Fermentation Control
 hello.world=Hola Mundo!
-title.error=Beer Fermentation Control - \u00a1Error!
 h1.error=\u00a1Error!
 p.1.error=Ha habido un error inesperado. Pongase en contacto con el Webmaster.
-=
+h1.login=Entrada
+subtitle.login=Introduzca su nombre de usuario y password
+language=es
