--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -1,7 +1,8 @@
 
-title.prueba=Beer Fermentation Control - Froga
+title=Beer Fermentation Control
 hello.world=Kaixo Mundua!
-title.error=Beer Fermentation Control - Errorea!
 h1.error=Errorea!
 p.1.error=Ezusteko arazo bat egon da. Jarri kontaktuan Webmasterrarekin.
-=
+h1.login=Sarrera
+subtitle.login=Sartu zure erabiltzaile izena eta pasahitza
+language=eu
