- Added locale reseolver and language changer. - Addesd header navbar.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -3,6 +3,6 @@ title=Beer Fermentation Control
 hello.world=Hello World!
 h1.error=Error!
 p.1.error=There's been an unexpected error. Contact with the WebMaster.
-h1.login=Log-in
+page.name.login=Log-in
 subtitle.login=Enter your username and password
 language=en
