--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -3,6 +3,6 @@ title=Beer Fermentation Control
 hello.world=Hola Mundo!
 h1.error=\u00a1Error!
 p.1.error=Ha habido un error inesperado. Pongase en contacto con el Webmaster.
-h1.login=Entrada
+page.name.login=Entrada
 subtitle.login=Introduzca su nombre de usuario y password
 language=es
