--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -3,6 +3,6 @@ title=Beer Fermentation Control
 hello.world=Kaixo Mundua!
 h1.error=Errorea!
 p.1.error=Ezusteko arazo bat egon da. Jarri kontaktuan Webmasterrarekin.
-h1.login=Sarrera
+page.name.login=Sarrera
 subtitle.login=Sartu zure erabiltzaile izena eta pasahitza
 language=eu
