--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -6,3 +6,6 @@ p.1.error=There's been an unexpected error. Contact with the WebMaster.
 h1.login=Log-in
 subtitle.login=Enter your username and password
 language=en
+username=Username
+password=Password
+sign.in=Sign in
