--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -6,3 +6,6 @@ p.1.error=Ha habido un error inesperado. Pongase en contacto con el Webmaster.
 h1.login=Entrada
 subtitle.login=Introduzca su nombre de usuario y password
 language=es
+username=Usuario
+password=Password
+sign.in=Entrar
