--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -6,3 +6,6 @@ p.1.error=Ezusteko arazo bat egon da. Jarri kontaktuan Webmasterrarekin.
 h1.login=Sarrera
 subtitle.login=Sartu zure erabiltzaile izena eta pasahitza
 language=eu
+username=Erabiltzailea
+password=Pasahitza
+sign.in=Sartu
