- Validation and DB connection working.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -10,3 +10,6 @@ username=Username
 password=Password
 sign.in=Sign in
 error.login=The username or password is not correct
+error.vacio=
+NotBlank.USER.username=The Username is required
+NotBlank.USER.password=The Password is required
