--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -10,3 +10,6 @@ username=Usuario
 password=Password
 sign.in=Entrar
 error.login=El usuario o password no es correcto
+error.vacio=
+NotBlank.USER.username=El Usuario es obligatorio
+NotBlank.USER.password=El Password es obligatorio
