--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -10,3 +10,6 @@ username=Erabiltzailea
 password=Pasahitza
 sign.in=Sartu
 error.login=Erabiltzaiea edo pasahitza ez da zuzena
+error.vacio=
+NotBlank.USER.username=Erabiltzailea derrigorrezkoa da
+NotBlank.USER.password=Pasahitza derrigorrezkoa da
