--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -13,3 +13,4 @@ error.login=The username or password is not correct
 error.vacio=
 NotBlank.USER.username=The Username is required
 NotBlank.USER.password=The Password is required
+logout=Logout
