--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -13,3 +13,4 @@ error.login=Erabiltzaiea edo pasahitza ez da zuzena
 error.vacio=
 NotBlank.USER.username=Erabiltzailea derrigorrezkoa da
 NotBlank.USER.password=Pasahitza derrigorrezkoa da
+logout=Saioa itxi
