--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -13,3 +13,4 @@ error.login=El usuario o password no es correcto
 error.vacio=
 NotBlank.USER.username=El Usuario es obligatorio
 NotBlank.USER.password=El Password es obligatorio
+logout=Cerrar sesi\u00f3n
