- Started working on config list page.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -14,3 +14,11 @@ error.vacio=
 NotBlank.USER.username=The Username is required
 NotBlank.USER.password=The Password is required
 logout=Logout
+name=Name
+start.date=Start
+end.date=End
+tolerance=Tolerance
+cold.plug=Cold plug
+warm.plug=Warm plug
+hydrom=Hydrom
+empty.list=Empty list
