--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -14,3 +14,11 @@ error.vacio=
 NotBlank.USER.username=El Usuario es obligatorio
 NotBlank.USER.password=El Password es obligatorio
 logout=Cerrar sesi\u00f3n
+name=Nombre
+start.date=Inicio
+end.date=Final
+tolerance=Tolerancia
+cold.plug=Enchufe fr\u00edo
+warm.plug=Enchufe calor
+hydrom=Hydrom
+empty.list=Lista vac\u00eda
