--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -14,3 +14,11 @@ error.vacio=
 NotBlank.USER.username=Erabiltzailea derrigorrezkoa da
 NotBlank.USER.password=Pasahitza derrigorrezkoa da
 logout=Saioa itxi
+name=Izena
+start.date=Hasiera
+end.date=Amaiera
+tolerance=Tolerantzia
+cold.plug=Hotzaren entxufea
+warm.plug=Beroaren entxufea
+hydrom=Hydrom
+empty.list=Zerrenda hutsa
