- Working on config list and new config pages.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -22,3 +22,8 @@ cold.plug=Cold plug
 warm.plug=Warm plug
 hydrom=Hydrom
 empty.list=Empty list
+config.list=Configuration List
+add.new=Add New
+date.pattern=MM/dd/yyyy
+new.config=New Config
+save=Save
