--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -22,3 +22,8 @@ cold.plug=Enchufe fr\u00edo
 warm.plug=Enchufe calor
 hydrom=Hydrom
 empty.list=Lista vac\u00eda
+config.list=Lista de configuraciones
+add.new=A\u00f1adir
+date.pattern=dd/MM/yyyy
+new.config=Nueva configuraci\u00f3n
+save=Guardar
