--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -22,3 +22,8 @@ cold.plug=Hotzaren entxufea
 warm.plug=Beroaren entxufea
 hydrom=Hydrom
 empty.list=Zerrenda hutsa
+config.list=Ezarpenen zerrenda
+add.new=Berria Gehitu
+date.pattern=yyyy/MM/dd
+new.config=Ezarpen berria
+save=Gorde
