--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -25,6 +25,7 @@ empty.list=Lista vac\u00eda
 config.list=Lista de configuraciones
 add.new=A\u00f1adir
 date.pattern=dd/MM/yyyy
-new.config=Nueva configuraci\u00f3n
+new.config=Nueva Configuraci\u00f3n
 save=Guardar
 cancel=Cancelar
+edit.config=Editar Configuraci\u00f3n
