- Add part finished in the Add/Edit config page.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -29,3 +29,8 @@ new.config=New Config
 save=Save
 cancel=Cancel
 edit.config=Edit Config
+NotBlank.CONFIG.name=The Name is required
+NotNull.CONFIG.tolerance=The Tolerance is required
+NotNull.CONFIG.startDate=The Start date is required
+NotNull.CONFIG.endDate=The End date is required
+date.input.pattern=\\d{2}/\\d{2}/\\d{4}
