--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -29,3 +29,8 @@ new.config=Nueva Configuraci\u00f3n
 save=Guardar
 cancel=Cancelar
 edit.config=Editar Configuraci\u00f3n
+NotBlank.CONFIG.name=El Nombre es obligatorio
+NotNull.CONFIG.tolerance=La Tolerancia es obligatoria
+NotNull.CONFIG.startDate=La fecha Inicio es obligatoria
+NotNull.CONFIG.endDate=La fecha Final es obligatoria
+date.input.pattern=\\d{2}/\\d{2}/\\d{4}
