--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -29,3 +29,8 @@ new.config=Ezarpen berria
 save=Gorde
 cancel=Ezeztatu
 edit.config=Ezarpena editatu
+NotBlank.CONFIG.name=Izena derrigorrezkoa da
+NotNull.CONFIG.tolerance=Tolerantzia derrigorrezkoa da
+NotNull.CONFIG.startDate=Hasiera data derrigorrezkoa da
+NotNull.CONFIG.endDate=Amaiera data derrigorrezkoa da
+date.input.pattern=\\d{4}/\\d{2}/\\d{2}
