- HandlerInterceptor changed for Filter + error page. - Error page redesigned. - Login page redesigned.

--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -34,3 +34,4 @@ NotNull.CONFIG.tolerance=La Tolerancia es obligatoria
 NotNull.CONFIG.startDate=La fecha Inicio es obligatoria
 NotNull.CONFIG.endDate=La fecha Final es obligatoria
 date.input.pattern=\\d{2}/\\d{2}/\\d{4}
+home.page=P\u00e1gina principal
