--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -34,3 +34,4 @@ NotNull.CONFIG.tolerance=Tolerantzia derrigorrezkoa da
 NotNull.CONFIG.startDate=Hasiera data derrigorrezkoa da
 NotNull.CONFIG.endDate=Amaiera data derrigorrezkoa da
 date.input.pattern=\\d{4}/\\d{2}/\\d{2}
+home.page=Orrialde nagusia
