--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -34,3 +34,4 @@ NotNull.CONFIG.tolerance=The Tolerance is required
 NotNull.CONFIG.startDate=The Start date is required
 NotNull.CONFIG.endDate=The End date is required
 date.input.pattern=\\d{2}/\\d{2}/\\d{4}
+home.page=Home page
