- Succes messages added. - Config elimination added.

--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -35,3 +35,5 @@ NotNull.CONFIG.startDate=Hasiera data derrigorrezkoa da
 NotNull.CONFIG.endDate=Amaiera data derrigorrezkoa da
 date.input.pattern=\\d{4}/\\d{2}/\\d{2}
 home.page=Orrialde nagusia
+succes.config.added=Ezarpena ongi gehitu da!
+succes.config.removed=Ezarpena ongi ezabatu da!
