--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -35,3 +35,5 @@ NotNull.CONFIG.startDate=The Start date is required
 NotNull.CONFIG.endDate=The End date is required
 date.input.pattern=\\d{2}/\\d{2}/\\d{4}
 home.page=Home page
+succes.config.added=The config has been added!
+succes.config.removed=The config has been removed!
