--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -35,3 +35,5 @@ NotNull.CONFIG.startDate=La fecha Inicio es obligatoria
 NotNull.CONFIG.endDate=La fecha Final es obligatoria
 date.input.pattern=\\d{2}/\\d{2}/\\d{4}
 home.page=P\u00e1gina principal
+succes.config.added=La configuraci\u00f3n se ha a\u00f1adido correctamente!
+succes.config.removed=La configuraci\u00f3n se ha eliminado correctamente!
