- Config edit added.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -37,3 +37,4 @@ date.input.pattern=\\d{2}/\\d{2}/\\d{4}
 home.page=Home page
 succes.config.added=The config has been added!
 succes.config.removed=The config has been removed!
+succes.config.updated=The config has been updated!
