--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -37,3 +37,4 @@ date.input.pattern=\\d{2}/\\d{2}/\\d{4}
 home.page=P\u00e1gina principal
 succes.config.added=La configuraci\u00f3n se ha a\u00f1adido correctamente!
 succes.config.removed=La configuraci\u00f3n se ha eliminado correctamente!
+succes.config.updated=La configuraci\u00f3n se ha actualizado correctamente!
