--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -37,3 +37,4 @@ date.input.pattern=\\d{4}/\\d{2}/\\d{2}
 home.page=Orrialde nagusia
 succes.config.added=Ezarpena ongi gehitu da!
 succes.config.removed=Ezarpena ongi ezabatu da!
+succes.config.updated=Ezarpena ongi eguneratu da!
