- Working on Config's details page.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -38,3 +38,13 @@ home.page=Home page
 succes.config.added=The config has been added!
 succes.config.removed=The config has been removed!
 succes.config.updated=The config has been updated!
+config.details=Config details
+details=Details
+ranges=Ranges
+readings=Readings
+events=Events
+add=Add
+remove=Remove
+edit=Edit
+tplink.cold=TPLink for Cold
+tplink.warm=TPLink for Warm
