--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -23,7 +23,7 @@ warm.plug=Enchufe calor
 hydrom=Hydrom
 empty.list=Lista vac\u00eda
 config.list=Lista de configuraciones
-add.new=A\u00f1adir
+add.new=A\u00f1adir Nueva
 date.pattern=dd/MM/yyyy
 new.config=Nueva Configuraci\u00f3n
 save=Guardar
@@ -38,3 +38,13 @@ home.page=P\u00e1gina principal
 succes.config.added=La configuraci\u00f3n se ha a\u00f1adido correctamente!
 succes.config.removed=La configuraci\u00f3n se ha eliminado correctamente!
 succes.config.updated=La configuraci\u00f3n se ha actualizado correctamente!
+config.details=Detalles de la configuraci\u00f3n
+details=Detalles
+ranges=Rangos
+readings=Lecturas
+events=Eventos
+add=A\u00f1adir
+remove=Eliminar
+edit=Editar
+tplink.cold=TPLink para Fr\u00edo
+tplink.warm=TPLink para Calor
