--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -38,3 +38,13 @@ home.page=Orrialde nagusia
 succes.config.added=Ezarpena ongi gehitu da!
 succes.config.removed=Ezarpena ongi ezabatu da!
 succes.config.updated=Ezarpena ongi eguneratu da!
+config.details=Ezarpenaren xehetasunak
+details=Xehetasunak
+ranges=Tarteak
+readings=Irakurketak
+events=Gertaerak
+add=Gehitu
+remove=Kendu
+edit=Aldatu
+tplink.cold=Hotzaren TPLinka
+tplink.warm=Beroaren TPLinka
