- Working on Config's details page.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -48,3 +48,8 @@ remove=Remove
 edit=Edit
 tplink.cold=TPLink for Cold
 tplink.warm=TPLink for Warm
+add.hydrom=Add Hydrom
+edit.hydrom=Edit Hydrom
+succes.hydrom.added=The Hydrom has been added!
+succes.hydrom.removed=The Hydrom has been removed!
+succes.hydrom.updated=The Hydrom has been updated!
