--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -48,3 +48,8 @@ remove=Eliminar
 edit=Editar
 tplink.cold=TPLink para Fr\u00edo
 tplink.warm=TPLink para Calor
+add.hydrom=A\u00f1adir Hydrom
+edit.hydrom=Editar Hydrom
+succes.hydrom.added=El Hydrom se ha a\u00f1adido correctamente!
+succes.hydrom.removed=El Hydrom se ha eliminado correctamente!
+succes.hydrom.updated=El Hydrom se ha actualizado correctamente!
