--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -48,3 +48,8 @@ remove=Kendu
 edit=Aldatu
 tplink.cold=Hotzaren TPLinka
 tplink.warm=Beroaren TPLinka
+add.hydrom=Hydrom-a gehitu
+edit.hydrom=Hydrom-a editatu
+succes.hydrom.added=Hydrom-a ongi gehitu da!
+succes.hydrom.removed=Hydrom-a ongi ezabatu da!
+succes.hydrom.updated=Hydrom-a ongi eguneratu da!
