- Config's details page: Hydrom CRUD finished.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -53,3 +53,4 @@ edit.hydrom=Edit Hydrom
 succes.hydrom.added=The Hydrom has been added!
 succes.hydrom.removed=The Hydrom has been removed!
 succes.hydrom.updated=The Hydrom has been updated!
+back=Back
