--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -53,3 +53,4 @@ edit.hydrom=Editar Hydrom
 succes.hydrom.added=El Hydrom se ha a\u00f1adido correctamente!
 succes.hydrom.removed=El Hydrom se ha eliminado correctamente!
 succes.hydrom.updated=El Hydrom se ha actualizado correctamente!
+back=Atras
