--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -53,3 +53,4 @@ edit.hydrom=Hydrom-a editatu
 succes.hydrom.added=Hydrom-a ongi gehitu da!
 succes.hydrom.removed=Hydrom-a ongi ezabatu da!
 succes.hydrom.updated=Hydrom-a ongi eguneratu da!
+back=Atzera
