- Config's details page: Main tab finished.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -54,3 +54,14 @@ succes.hydrom.added=The Hydrom has been added!
 succes.hydrom.removed=The Hydrom has been removed!
 succes.hydrom.updated=The Hydrom has been updated!
 back=Back
+add.tplink=Add TPLink
+edit.tplink=Edit TPLink
+type=Type
+NotBlank.HYDROM.name=The Name is required
+NotBlank.TPLINK.name=The Name is required
+NotBlank.TPLINK.ip=The IP is required
+Pattern.TPLINK.ip=The IP must match the pattern ###.###.###.###
+succes.tplink.added=The TPLink has been added!
+succes.tplink.removed=The TPLink has been removed!
+succes.tplink.updated=The TPLink has been updated!
+ip=IP
