--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -54,3 +54,14 @@ succes.hydrom.added=El Hydrom se ha a\u00f1adido correctamente!
 succes.hydrom.removed=El Hydrom se ha eliminado correctamente!
 succes.hydrom.updated=El Hydrom se ha actualizado correctamente!
 back=Atras
+add.tplink=A\u00f1adir TPLink
+edit.tplink=Editar TPLink
+type=Tipo
+NotBlank.HYDROM.name=El Nombre es obligatorio
+NotBlank.TPLINK.name=El Nombre es obligatorio
+NotBlank.TPLINK.ip=La IP es obligatoria
+Pattern.TPLINK.ip=La IP debe cumplir el patr\u00f3n ###.###.###.###
+succes.tplink.added=El TPLink se ha a\u00f1adido correctamente!
+succes.tplink.removed=El TPLink se ha eliminado correctamente!
+succes.tplink.updated=El TPLink se ha actualizado correctamente!
+ip=IP
