--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -54,3 +54,14 @@ succes.hydrom.added=Hydrom-a ongi gehitu da!
 succes.hydrom.removed=Hydrom-a ongi ezabatu da!
 succes.hydrom.updated=Hydrom-a ongi eguneratu da!
 back=Atzera
+add.tplink=TPLink-a gehitu
+edit.tplink=TPLink-a editatu
+type=Mota
+NotBlank.HYDROM.name=Izena derrigorrezkoa da
+NotBlank.TPLINK.name=Izena derrigorrezkoa da
+NotBlank.TPLINK.ip=IP-a derrigorrezkoa da
+Pattern.TPLINK.ip=IP-ak ###.###.###.### patroai bete behar du
+succes.tplink.added=TPLink-a ongi gehitu da!
+succes.tplink.removed=TPLink-a ongi ezabatu da!
+succes.tplink.updated=TPLink-a ongi eguneratu da!
+ip=IP
