- Config's details page: Ranges tab finished.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -65,3 +65,17 @@ succes.tplink.added=The TPLink has been added!
 succes.tplink.removed=The TPLink has been removed!
 succes.tplink.updated=The TPLink has been updated!
 ip=IP
+range.list=Range list
+top.gravity=Top gravity (included)
+bottom.gravity=Bottom gravity (not included)
+aimed.temperature=Aimed temperature
+succes.range.added=The range has been added!
+succes.range.removed=The range has been removed!
+succes.range.updated=The range has been updated!
+add.range=Add Range
+edit.range=Edit Range
+NotNull.RANGE.topGravity=The Top gravity is required
+NotNull.RANGE.bottomGravity=The Bottom gravity is required
+NotNull.RANGE.aimedTemp=The Aimed temperature is required
+error.top.gravitty.le.bottom.gravity=Top gravity must be greater than Bottom gravity
+error.overlaps.other.range=This range overlaps other range
