--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -65,3 +65,17 @@ succes.tplink.added=El TPLink se ha a\u00f1adido correctamente!
 succes.tplink.removed=El TPLink se ha eliminado correctamente!
 succes.tplink.updated=El TPLink se ha actualizado correctamente!
 ip=IP
+range.list=Lista de rangos
+top.gravity=Gravedad superior (incluida)
+bottom.gravity=Gravedad inferior (no incluida)
+aimed.temperature=Temperatura objetivo
+succes.range.added=El rango se ha a\u00f1adido correctamente!
+succes.range.removed=El rango se ha eliminado correctamente!
+succes.range.updated=El rango se ha actualizado correctamente!
+add.range=A\u00f1adir Rango
+edit.range=Editar Rango
+NotNull.RANGE.topGravity=La Gravedad superior es obligatoria
+NotNull.RANGE.bottomGravity=La Gravedad inferior es obligatoria
+NotNull.RANGE.aimedTemp=La Temperatura objetivo es obligatoria
+error.top.gravitty.le.bottom.gravity=La Gravedad superior tiene que ser mayor que la Gravedad inferior
+error.overlaps.other.range=Este rango solapa otro rango
