--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -65,3 +65,17 @@ succes.tplink.added=TPLink-a ongi gehitu da!
 succes.tplink.removed=TPLink-a ongi ezabatu da!
 succes.tplink.updated=TPLink-a ongi eguneratu da!
 ip=IP
+range.list=Tarteen zerrenda
+top.gravity=Goi grabitatea (sartzen da)
+bottom.gravity=Behe grabitatea (ez da sartzen)
+aimed.temperature=Jomuga tenperatura
+succes.range.added=Tartea ongi gehitu da!
+succes.range.removed=Tartea ongi ezabatu da!
+succes.range.updated=Tartea ongi eguneratu da!
+add.range=Tarte bat gehitu
+edit.range=Tartea editatu
+NotNull.RANGE.topGravity=Goi grabitatea derrigorrezkoa da
+NotNull.RANGE.bottomGravity=Behe grabitatea derrigorrezkoa da
+NotNull.RANGE.aimedTemp=Jomuga tenperatura derrigorrezkoa da
+error.top.gravitty.le.bottom.gravity=Goi grabitateak behe grabitatea baino handiagoa izan behar da
+error.overlaps.other.range=Tarte honek beste tarte bat teilakatzen du
