- Config's details page: modals for delete operations.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -79,3 +79,7 @@ NotNull.RANGE.bottomGravity=The Bottom gravity is required
 NotNull.RANGE.aimedTemp=The Aimed temperature is required
 error.top.gravitty.le.bottom.gravity=Top gravity must be greater than Bottom gravity
 error.overlaps.other.range=This range overlaps other range
+ask.remove.config=Are you sure you want to remove this config?
+ask.remove.hydrom=Are you sure you want to remove this Hydrom?
+ask.remove.tplink=Are you sure you want to remove this TPLink?
+ask.remove.range=Are you sure you want to remove this range?
