--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -79,3 +79,7 @@ NotNull.RANGE.bottomGravity=La Gravedad inferior es obligatoria
 NotNull.RANGE.aimedTemp=La Temperatura objetivo es obligatoria
 error.top.gravitty.le.bottom.gravity=La Gravedad superior tiene que ser mayor que la Gravedad inferior
 error.overlaps.other.range=Este rango solapa otro rango
+ask.remove.config=\u00bfEst\u00e1s seguro de querer eliminar esta configuraci\u00f3n?
+ask.remove.hydrom=\u00bfEst\u00e1s seguro de querer eliminar este Hydrom?
+ask.remove.tplink=\u00bfEst\u00e1s seguro de querer eliminar este TPLink?
+ask.remove.range=\u00bfEst\u00e1s seguro de querer eliminar este rango?
