--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -79,3 +79,7 @@ NotNull.RANGE.bottomGravity=Behe grabitatea derrigorrezkoa da
 NotNull.RANGE.aimedTemp=Jomuga tenperatura derrigorrezkoa da
 error.top.gravitty.le.bottom.gravity=Goi grabitateak behe grabitatea baino handiagoa izan behar da
 error.overlaps.other.range=Tarte honek beste tarte bat teilakatzen du
+ask.remove.config=Ziur zaude ezarpen hau ezabatu nahi duzula?
+ask.remove.hydrom=Ziur zaude Hydrom hau ezabatu nahi duzula?
+ask.remove.tplink=Ziur zaude TPLink hau ezabatu nahi duzula?
+ask.remove.range=Ziur zaude tarte hau ezabatu nahi duzula?
