- WIP: TPLink control.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -83,3 +83,9 @@ ask.remove.config=Are you sure you want to remove this config?
 ask.remove.hydrom=Are you sure you want to remove this Hydrom?
 ask.remove.tplink=Are you sure you want to remove this TPLink?
 ask.remove.range=Are you sure you want to remove this range?
+mac.address=MAC Address
+email=Email
+NotBlank.TPLINK.email=The Email is required
+NotBlank.TPLINK.password=The Password is required
+NotBlank.TPLINK.uuid=The MAC is required
+Email.TPLINK.email=This is not a valid email
