--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -83,3 +83,9 @@ ask.remove.config=\u00bfEst\u00e1s seguro de querer eliminar esta configuraci\u0
 ask.remove.hydrom=\u00bfEst\u00e1s seguro de querer eliminar este Hydrom?
 ask.remove.tplink=\u00bfEst\u00e1s seguro de querer eliminar este TPLink?
 ask.remove.range=\u00bfEst\u00e1s seguro de querer eliminar este rango?
+mac.address=Direcci\u00f3n MAC
+email=E-mail
+NotBlank.TPLINK.email=El E-mail es obligatorio
+NotBlank.TPLINK.password=El Password es obligatorio
+NotBlank.TPLINK.uuid=La MAC es obligatoria
+Email.TPLINK.email=Este no es un E-mail valido
