--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -83,3 +83,9 @@ ask.remove.config=Ziur zaude ezarpen hau ezabatu nahi duzula?
 ask.remove.hydrom=Ziur zaude Hydrom hau ezabatu nahi duzula?
 ask.remove.tplink=Ziur zaude TPLink hau ezabatu nahi duzula?
 ask.remove.range=Ziur zaude tarte hau ezabatu nahi duzula?
+mac.address=MAC Helbidea
+email=Eposta
+NotBlank.TPLINK.email=Eposta derrigorrezkoa da
+NotBlank.TPLINK.password=Pasahitza derrigorrezkoa da
+NotBlank.TPLINK.uuid=MAC-a derrigorrezkoa da
+Email.TPLINK.email=Hau ez da eposta egoki bat
