- Config detail page: Events added. - Config detail page: Readings added. - Datatables added.

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -89,3 +89,9 @@ NotBlank.TPLINK.email=The Email is required
 NotBlank.TPLINK.password=The Password is required
 NotBlank.TPLINK.uuid=The MAC is required
 Email.TPLINK.email=This is not a valid email
+event.list=Event list
+reading.list=Reading list
+moment=Moment
+event=Event
+timestamp.pattern=MM/dd/yyyy hh:mm:ss
+datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/en-GB.json
