--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -89,3 +89,9 @@ NotBlank.TPLINK.email=El E-mail es obligatorio
 NotBlank.TPLINK.password=El Password es obligatorio
 NotBlank.TPLINK.uuid=La MAC es obligatoria
 Email.TPLINK.email=Este no es un E-mail valido
+event.list=Lista de eventos
+reading.list=Lista de lecturas
+moment=Momento
+event=Evento
+timestamp.pattern=dd/MM/yyyy hh:mm:ss
+datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json
