--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -89,3 +89,9 @@ NotBlank.TPLINK.email=Eposta derrigorrezkoa da
 NotBlank.TPLINK.password=Pasahitza derrigorrezkoa da
 NotBlank.TPLINK.uuid=MAC-a derrigorrezkoa da
 Email.TPLINK.email=Hau ez da eposta egoki bat
+event.list=Gertaeren zerrenda
+reading.list=Irakurketen zerrenda
+moment=Unea
+event=Gertaera
+timestamp.pattern=yyyy/MM/dd hh:mm:ss
+datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/eu.json
