- Improved look&feel

--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -93,5 +93,5 @@ event.list=Event list
 reading.list=Reading list
 moment=Moment
 event=Event
-timestamp.pattern=MM/dd/yyyy hh:mm:ss
+timestamp.pattern=MM/dd/yyyy HH:mm:ss
 datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/en-GB.json
