--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -93,5 +93,5 @@ event.list=Lista de eventos
 reading.list=Lista de lecturas
 moment=Momento
 event=Evento
-timestamp.pattern=dd/MM/yyyy hh:mm:ss
+timestamp.pattern=dd/MM/yyyy HH:mm:ss
 datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json
