--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -93,5 +93,5 @@ event.list=Gertaeren zerrenda
 reading.list=Irakurketen zerrenda
 moment=Unea
 event=Gertaera
-timestamp.pattern=yyyy/MM/dd hh:mm:ss
+timestamp.pattern=yyyy/MM/dd HH:mm:ss
 datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/eu.json
