--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -95,3 +95,6 @@ moment=Momento
 event=Evento
 timestamp.pattern=dd/MM/yyyy HH:mm:ss
 datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json
+gravity=Gravedad
+temperature=Temperatura
+json=El JSON
