--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -95,3 +95,6 @@ moment=Unea
 event=Gertaera
 timestamp.pattern=yyyy/MM/dd HH:mm:ss
 datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/eu.json
+gravity=Grabitatea
+temperature=Tenperatura
+json=JSON-a
