--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -95,3 +95,6 @@ moment=Moment
 event=Event
 timestamp.pattern=MM/dd/yyyy HH:mm:ss
 datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/en-GB.json
+gravity=Gravity
+temperature=Temperature
+json=The JSON
