- Temperature and gravity chart added.

--- a/BeerFermControlWEB/src/main/resources/messages_es.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_es.properties
@@ -98,3 +98,6 @@ datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json
 gravity=Gravedad
 temperature=Temperatura
 json=El JSON
+chart=Gr\u00e1fico
+chart.title=Gr\u00e1fico de temperatura y gravedad
+redraw=Redibujar
