--- a/BeerFermControlWEB/src/main/resources/messages_eu.properties
+++ b/BeerFermControlWEB/src/main/resources/messages_eu.properties
@@ -98,3 +98,6 @@ datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/eu.json
 gravity=Grabitatea
 temperature=Tenperatura
 json=JSON-a
+chart=Grafikoa
+chart.title=Tenperatura eta grabitate grafikoa
+redraw=Berriz marraztu
