--- a/BeerFermControlWEB/src/main/resources/messages.properties
+++ b/BeerFermControlWEB/src/main/resources/messages.properties
@@ -98,3 +98,6 @@ datatable.language.url=//cdn.datatables.net/plug-ins/1.13.6/i18n/en-GB.json
 gravity=Gravity
 temperature=Temperature
 json=The JSON
+chart=Chart
+chart.title=Temperature and gravity chart
+redraw=Redraw
